src/objects/APIGEE_ACCESS_TOKEN__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Token_Time__c</fullName>
        <label>Last Token Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APIGEE_ACCESS_TOKEN</label>
    <nameField>
        <label>APIGEE_ACCESS_TOKEN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APIGEE_ACCESS_TOKENS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>